--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
     "react-easy-crop": "^5.5.6",
     "react-hook-form": "^7.68.0",
     "react-social-media-embed": "^2.5.18",
+    "react-tsparticles": "^2.12.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
+    "tsparticles": "^3.9.1",
     "zod": "^4.1.13"
   },
   "devDependencies": {
