--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.9.1",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
@@ -44,10 +46,8 @@
     "react-easy-crop": "^5.5.6",
     "react-hook-form": "^7.68.0",
     "react-social-media-embed": "^2.5.18",
-    "react-tsparticles": "^2.12.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
-    "tsparticles": "^3.9.1",
     "zod": "^4.1.13"
   },
   "devDependencies": {
